added recipe to lasagna.html

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,5 +6,29 @@
         </head>
         <body>
             <h1>Lasagna is made of meat and something else I forgor</h1>
+            
+            <img src="../images/lasagna.png" alt="my homeade lasagna">
+            <h3>my homeade lasagna</h3>
+            
+            <h1>INGREDIENTS</h1>
+            <ul>
+                <li>chicken breast</li>
+                <li>lime juicee</li>
+                <li>taco seasoning</li>
+                <li>shredded mozzerella</li>
+                <li>sour cream</li>
+                <li>salsa</li>
+                <li>salt and pepper</li>
+                <li>lasagna noodles</li>
+            </ul>
+
+            <h1>STEPS</h1>
+            <ol>
+                <li>combine seasoning</li>
+                <li>cook chicken for 15 minutes</li>
+                <li>mix cheese, sour cream and salsa in a bowl</li>
+                <li>put sour cream in baking dish, then add mozzerella</li>
+                <li>bake in a preheated oven</li>
+            </ol>
         </body>
     </html>
