--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         </head>
         <body>
             <h1>Odin Recipes</h1>
-            <a href="./recipes/lasagna.html">Lasagna</a>
+            <ul>
+                <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+                <li><a href="./recipes/deviled_eggs.html">Wasabi Deviled Eggs</a></li>
+            </ul>
         </body>
     </html>
